--- a/contact-me.html
+++ b/contact-me.html
@@ -7,7 +7,7 @@
   <body>
     <form class="" action="mailto:safira.zahira.sz@gmail.com" method="post" enctype="text/plain">
       <label for="">Your name:</label>
-      <input type="text" name="youtname" value=""><br>
+      <input type="text" name="yourname" value=""><br>
       <label for="">Your email:</label>
       <input type="email" name="yourEmail" value=""><br>
       <label for="">Your message:</label><br>
