--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
   </table>
 
   <p align="justify">
-    I am a robotics engineering student with a passion for learning and programming.
-    Aside from my degree, I am passionate in programming and am currently learning
-    to be a full stack developer (HTML, CSS, Javascript) as well as C++ & Python languages.
-    I am self motivated, driven and very detail oriented.<hr />
+    Results-driven and technically proficient Web Developer with hands-on experience as a web development intern. Strong expertise in cloud security, PHP, CSS Flexbox, jQuery, and Express.js. Skilled in building and integrating application programming interfaces (APIs) and utilizing version control systems such as Git and GitHub. Proficient in working with MongoDB and Mongoose for database management, as well as REST APIs and decentralized applications (DApps). Passionate about technological innovation and leveraging cloud services and infrastructure for scalable web applications. Well-versed in machine learning, React.js, Firebase, and cloud-based technologies. Excellent analytical skills, time management, and attention to detail, complemented by strong communication abilities<hr />
 
 
   </p>
@@ -78,7 +75,7 @@
       C++
     </td>
     <td>
-      ⭐⭐⭐
+      JavaScript
     </td>
 
   </tr>
@@ -87,7 +84,7 @@
       Python
     </td>
     <td>
-      ⭐⭐⭐
+      PHP
     </td>
   </tr>
   <tr>
@@ -95,7 +92,7 @@
       HTML
     </td>
     <td>
-      ⭐⭐⭐⭐⭐⭐⭐
+      API
     </td>
 
   </tr>
@@ -104,7 +101,7 @@
       CSS
     </td>
     <td>
-      ⭐⭐
+      MongoDB
     </td>
   </tr>
 </table>
