--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
 
 <!--Skills review-->
 <h3>Skills</h3>
+ <style>
+  td{
+    padding-left: 15px;
+  }
+  tr{
+    margin-bottom: 30px;
+  }
+</style>
 <table>
   <tr>
     <td>
@@ -76,6 +84,9 @@
     </td>
     <td>
       JavaScript
+    </td>
+    <td>
+      MySQL
     </td>
 
   </tr>
@@ -86,6 +97,9 @@
     <td>
       PHP
     </td>
+    <td>
+      JQuery
+      <td>
   </tr>
   <tr>
     <td>
@@ -93,6 +107,9 @@
     </td>
     <td>
       API
+    </td>
+    <td>
+      Node.js
     </td>
 
   </tr>
@@ -103,7 +120,33 @@
     <td>
       MongoDB
     </td>
+    <td>
+      React.js
+    </td>
   </tr>
+  <tr>
+    <td>
+      DApps
+    </td>
+    <td>
+      Nuxt.Js
+    </td>
+    <td>
+      Bootsrap
+    </td>
+  <tr>
+    <td>
+      Typescript
+    </td>
+    <td>
+      Figma
+    </td>
+    <td>
+      DBANK
+    </td>
+</table>
+      
+    
 </table>
 <a href="contact-me.html"> Send me an email!!</a>
 
